<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.mycompany.whisky.SzukajButelki">

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/podajNazweSzukanejButelki"
        android:id="@+id/wprowadzanieNazwyButelkiZPodpowiedzia"
        android:ems="10">
        <requestFocus/>
    </AutoCompleteTextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="121dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/wybierzWiek"
            android:id="@+id/text_wiek"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerWiek"
            android:entries="@array/wybranyWiek"
            android:prompt="@string/wybierzWiek"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/spinnerKraj"
            android:layout_alignStart="@+id/spinnerKraj"
            android:minHeight="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/wybierzKraj"
            android:id="@+id/text_kraj"
            android:layout_below="@+id/spinnerWiek"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="14dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerKraj"
            android:entries="@array/wybranyKraj"
            android:prompt="@string/wybierzKraj"
            android:layout_toRightOf="@+id/text_kraj"
            android:layout_toEndOf="@+id/text_kraj"
            android:layout_marginLeft="37dp"
            android:layout_marginStart="37dp"
            android:minHeight="100dp"
            android:layout_below="@+id/spinnerWiek" />
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/szukajButelki"
        android:id="@+id/przyciskSzukaj"
        android:layout_gravity="center_horizontal"
        android:onClick="wyswietlListeWyszukanychButelek"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listaWyszukanychButelek"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
